Done half of task one

--- a/notebooks/parse_news_data.ipynb
+++ b/notebooks/parse_news_data.ipynb
@@ -294,7 +294,34 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Top 10 Regions by Article Count:\n",
+      "        Region  ArticleCount\n",
+      "1           US         39028\n",
+      "4       Russia          2089\n",
+      "2        China          1773\n",
+      "5      Ukraine          1289\n",
+      "0       Africa            20\n",
+      "3           EU             2\n",
+      "6  Middle East             2\n",
+      "\n",
+      "Bottom 10 Regions by Article Count:\n",
+      "        Region  ArticleCount\n",
+      "3           EU             2\n",
+      "6  Middle East             2\n",
+      "0       Africa            20\n",
+      "5      Ukraine          1289\n",
+      "2        China          1773\n",
+      "4       Russia          2089\n",
+      "1           US         39028\n"
+     ]
+    }
+   ],
    "source": [
     "# 5. Websites that reported about Africa, US, China, EU, Russia, Ukraine, Middle East\n",
     "\n",
